--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://macgyverbest.github.io/Agenda/app.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <link rel="stylesheet" href="https://macgyverbest.github.io/Agenda/lib/bulma.css">
-  <link rel="manifest" href="https://macgyverbest.github.io/Agenda/lib/manifest.json">
+  <link rel="manifest" href="https://macgyverbest.github.io/Agenda/manifest.json">
 </head>
 
 <body>
