--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
     </div>
   </section>
-    <script src="https://macgyverbest.github.io/Agenda/service-worker.js"> </script>
+    <script src="https://macgyverbest.github.io/Agenda/sw.js"> </script>
 </body>
 
 </html>
